[tool.poetry]
name = "iblm"
version = "0.1.45"
description = "inductive bias learning"
authors = ["toma tanaka <ulti4929@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
langchain = "^0.0.208"
openai = "^0.27.8"
jupyter = "^1.0.0"
pandas = "1.4.0"
scikit-learn = "^1.2.2"
datasets = "^2.13.1"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
python-dotenv = "^1.0.0"
numpy = "^1.21,<1.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

