[tool.poetry]
name = "iblm"
version = "0.2.19"
description = "Inductive-bias Learning"
authors = ["toma tanaka <ulti4929@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
langchain = "0.0.220"
openai = "^0.27.8"
jupyter = "^1.0.0"
pandas = "1.4.0"
scikit-learn = "^1.2.2"
datasets = "^2.13.1"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
python-dotenv = "^1.0.0"
numpy = "^1.21,<1.24"
plotly = "^5.15.0"
jupyterlab = "^4.0.4"
jupyterlab-code-formatter = "^2.2.1"
black = "^23.7.0"
isort = "^5.12.0"
jupyter-ai = "^2.0.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

