[tool.poetry]
name = "iblm"
version = "1.0.6"
description = "Inductive-bias Learning"
authors = ["toma tanaka <ulti4929@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.group.dev.dependencies]
ipython = "<8.16.16"
poetry-version-plugin = "^0.2.0"
ruff = "^0.3.0"
codespell = "^2.2.6"
pre-commit = "3.4.0"
jupyter = "^1.0.0"
plotly = "^5.15.0"
matplotlib = "^3.7.1"
python-dotenv = "^1.0.0"
ipykernel = "^6.29.2"
lightgbm = "^4.3.0"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
pandas = "1.4.0"
numpy = "^1.21,<1.24"
openai = "1.3.7"
google-generativeai = "^0.3.2"
scikit-learn = "^1.2.2"
datasets = "^2.13.1"
tqdm = "^4.65.0"
jinja2 = "^3.1.0"
anthropic = "^0.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# [tool.poetry-version-plugin]
# source = "git-tag"


[tool.ruff]
fix = false
line-length = 120
target-version = "py39"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "ERA", # flake8-eradicate/eradicate
  "I",   # isort
  "PIE", # flake8-pie
  "PGH", # pygrep
  "RUF", # ruff checks
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
]
ignore-init-module-imports = true
unfixable = [
  "ERA", # do not autoremove commented out code
]
flake8-tidy-imports = { ban-relative-imports = "all" }  # 相対インポートの禁止(可読性のため)
pydocstyle = { convention = "google" }  # Googleスタイルのdocstring


[tool.ruff.lint.isort]
force-single-line = false
lines-between-types = 1
lines-after-imports = 2
known-first-party = ["llm_client", "exceptions", "prompt", "metrics"]
known-third-party = [""]
required-imports = ["from __future__ import annotations"]
